--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio Project Landing Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+
+        p {
+            text-align: center;
+            color: #666;
+            margin-bottom: 20px;
+        }
+
+        .button {
+            display: block;
+            width: 200px;
+            margin: 20px auto;
+            padding: 10px;
+            text-align: center;
+            color: #fff;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            transition: background-color 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: #0056b3;
+            cursor: pointer;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <h1>My Portfolio Project Landing Page</h1>
+        <p>Welcome to my Portfolio Project landing page!</p>
+        <p>Here, you'll find information about my project and insights into my journey as a developer.</p>
+        <p>Click the button below to explore my deployed app:</p>
+        <a href="https://kipsamoh.tech" class="button">Explore My App</a>
+        <p>You can also check out the source code of your project on GitHub:</p>
+        <a href="https://github.com/kipsamoh/BMIcare" class="button">View on GitHub</a>
+        <p>Feel free to reach out to me at kipsamoh@gmail.com for any questions or collaborations!</p>
+    </div>
+</body>
+
+</html>
 
