image and descriptions added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio Project Landing Page</title>
+    <title> BMIcare Landing Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -51,17 +51,54 @@
             background-color: #0056b3;
             cursor: pointer;
         }
+
+        header {
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        header h1 {
+            font-size: 2em;
+            color: #333;
+        }
+
+        header p {
+            color: #666;
+            margin-bottom: 20px;
+        }
+
+        nav {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>My Portfolio Project Landing Page</h1>
-        <p>Welcome to my Portfolio Project landing page!</p>
+        <header>
+            <h1> BMIcare Landing Page</h1>
+            <p>Welcome to my BMIcare  Portfolio Project landing page!</p>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+            <a href="https://kipsamoh.tech" class="button">Explore my BMIcare App</a>
+        </header>
         <p>Here, you'll find information about my project and insights into my journey as a developer.</p>
-        <p>Click the button below to explore my deployed app:</p>
-        <a href="https://kipsamoh.tech" class="button">Explore My App</a>
-        <p>You can also check out the source code of your project on GitHub:</p>
+        <p>You can also check out the source code of my BMIcare portfolio project on GitHub:</p>
         <a href="https://github.com/kipsamoh/BMIcare" class="button">View on GitHub</a>
         <p>Feel free to reach out to me at kipsamoh@gmail.com for any questions or collaborations!</p>
     </div>
