--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> BMIcare Landing Page</title>
+    <title>BMIcare Landing Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -87,8 +87,9 @@
 <body>
     <div class="container">
         <header>
-            <h1> BMIcare Landing Page</h1>
-            <p>Welcome to my BMIcare  Portfolio Project landing page!</p>
+            <h1>BMIcare Landing Page</h1>
+            <img src="images/your-image-file.jpg" alt="BMIcare Image">
+            <p>Welcome to my BMIcare Portfolio Project landing page!</p>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
