--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container">
         <header>
             <h1>BMIcare Landing Page</h1>
-            <img src="images/your-image-file.jpg" alt="BMIcare Image">
+            <img src="images/bmi_image.jpg" alt="BMIcare Image">
             <p>Welcome to my BMIcare Portfolio Project landing page!</p>
             <nav>
                 <ul>
