--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <header>
             <h1>BMIcare Landing Page</h1>
             <img src="images/bmi_image.jpg" alt="BMIcare Image">
-            <p>Welcome to my BMIcare Portfolio Project landing page!</p>
+            <p>The BMIcare calculator app is a web-based tool designed to calculate Body Mass Index (BMI) based on user input of height and weight. BMI is a measure used to assess body weight relative to height,and it is commonly used as an indicator of overall health and risk of certain diseases</p>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
