--- a/index.html
+++ b/index.html
@@ -87,16 +87,18 @@
 <body>
     <div class="container">
         <header>
-            <h1>BMIcare Landing Page</h1>
+            <h1>BMIcare Calculator App</h1>
             <img src="images/bmi_image.jpg" alt="BMIcare Image">
             <p>The BMIcare calculator app is a web-based tool designed to calculate Body Mass Index (BMI) based on user input of height and weight. BMI is a measure used to assess body weight relative to height,and it is commonly used as an indicator of overall health and risk of certain diseases</p>
             <nav>
                 <ul>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#about">Home</a></li>
+                    <li><a href="#contact">About</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="#contact">Help</a></li>
                 </ul>
             </nav>
-            <a href="https://kipsamoh.tech" class="button">Explore my BMIcare App</a>
+            <a href="https://kipsamoh.tech" class="button">Use BMIcare App</a>
         </header>
         <p>Here, you'll find information about my project and insights into my journey as a developer.</p>
         <p>You can also check out the source code of my BMIcare portfolio project on GitHub:</p>
