--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </nav>
             <a href="https://kipsamoh.tech" class="button">Use BMIcare App</a>
         </header>
-        <p>Here, you'll find information about my project and insights into my journey as a developer.</p>
+        <p>Find information about my project and insights into my journey as a developer.</p>
         <p>You can also check out the source code of my BMIcare portfolio project on GitHub:</p>
         <a href="https://github.com/kipsamoh/BMIcare" class="button">View on GitHub</a>
         <p>Feel free to reach out to me at kipsamoh@gmail.com for any questions or collaborations!</p>
