--- a/index.html
+++ b/index.html
@@ -138,26 +138,25 @@
             </div>
         </section>
 
-        <!-- About Section (if any) -->
+        <!-- About Section  -->
         <section id="about">
             <h2>About BMIcare</h2>
             <p>BMIcare is developed with the goal of providing a simple yet effective tool for individuals to monitor their body mass index and gain insights into their overall health status. Our team is dedicated to promoting health awareness and well-being through accessible technology.</p>
         </section>
 
-        <!-- Contact Section (if any) -->
+        <!-- Contact Section  -->
         <section id="contact">
             <h2>Contact Us</h2>
             <p>Have questions or feedback? We'd love to hear from you! Reach out to us at contact@bmicare.com</p>
         </section>
 
-        <!-- Help Section (if any) -->
+        <!-- Help Section  -->
         <section id="help">
             <h2>Need Help?</h2>
             <p>If you need assistance or have any inquiries regarding how to use BMIcare, check out our FAQ section or contact our support team for personalized assistance.</p>
         </section>
 
-        <!-- Additional Sections (if any) -->
-        <!-- Footer Section (if any) -->
+        <!-- Footer Section  -->
         <footer>
             <p>&copy; 2024 BMIcare. All rights reserved.</p>
         </footer>
