--- a/index.html
+++ b/index.html
@@ -117,23 +117,24 @@
                 </ul>
             </nav>
             <a href="https://kipsamoh.tech" class="button">Use BMIcare App</a>
+            <a href="https://github.com/kipsamoh/BMIcare" class="button">View on GitHub</a>
         </header>
 
         <!-- Feature Section -->
         <section id="features">
             <div class="feature">
                 <img src="images/feature1_image.jpg" alt="Feature 1">
-                <h2>Feature 1: BMI Calculator</h2>
+                <h2>Calculate BMI Seamlessly</h2>
                 <p>Calculate your Body Mass Index (BMI) instantly with our easy-to-use BMI calculator. Input your height and weight, and get your BMI along with a personalized interpretation.</p>
             </div>
             <div class="feature">
                 <img src="images/feature2_image.jpg" alt="Feature 2">
-                <h2>Feature 2: Health Insights</h2>
+                <h2> Health Insights At Your Fingertips</h2>
                 <p>Gain valuable insights into your health status based on your BMI results. Learn about the significance of BMI, its interpretation, and implications for your overall well-being.</p>
             </div>
             <div class="feature">
                 <img src="images/feature3_image.jpg" alt="Feature 3">
-                <h2>Feature 3: User-Friendly Interface</h2>
+                <h2> Enjoy User-Friendly Interface</h2>
                 <p>Experience a seamless user experience with our intuitive and user-friendly interface. Our app is designed to make BMI calculation and interpretation hassle-free for users of all levels.</p>
             </div>
         </section>
@@ -144,13 +145,13 @@
             <p>BMIcare is developed with the goal of providing a simple yet effective tool for individuals to monitor their body mass index and gain insights into their overall health status. Our team is dedicated to promoting health awareness and well-being through accessible technology.</p>
         </section>
 
-        <!-- Contact Section  -->
+        <!-- Contact Section -->
         <section id="contact">
             <h2>Contact Us</h2>
             <p>Have questions or feedback? We'd love to hear from you! Reach out to us at contact@bmicare.com</p>
         </section>
 
-        <!-- Help Section  -->
+        <!-- Help Section -->
         <section id="help">
             <h2>Need Help?</h2>
             <p>If you need assistance or have any inquiries regarding how to use BMIcare, check out our FAQ section or contact our support team for personalized assistance.</p>
