--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
             color: #333;
         }
 
+        h1 {
+            background-color: #007bff;
+            color: #fff;
+            padding: 20px 0;
+            margin-top: 0;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+        }
+
+        h2 {
+            background-color: #0056b3;
+            color: #fff;
+            padding: 10px 0;
+            margin-top: 0;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+        }
+
         p {
             text-align: center;
             color: #666;
@@ -56,10 +74,6 @@
         header {
             text-align: center;
             padding: 20px 0;
-        }
-
-        header h1 {
-            font-size: 2em;
         }
 
         nav {
@@ -143,6 +157,13 @@
         <section id="about">
             <h2>About BMIcare</h2>
             <p>BMIcare is developed with the goal of providing a simple yet effective tool for individuals to monitor their body mass index and gain insights into their overall health status. Our team is dedicated to promoting health awareness and well-being through accessible technology.</p>
+            <p>Meet our team members:</p>
+            <ul>
+                <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+                <li><a href="https://github.com/">GitHub</a></li>
+                <li><a href="https://twitter.com/">Twitter</a></li>
+            </ul>
+            <p>Check out our project on <a href="https://github.com/kipsamoh/BMIcare">GitHub</a>.</p>
         </section>
 
         <!-- Contact Section -->
@@ -157,7 +178,7 @@
             <p>If you need assistance or have any inquiries regarding how to use BMIcare, check out our FAQ section or contact our support team for personalized assistance.</p>
         </section>
 
-        <!-- Footer Section  -->
+        <!-- Footer Section -->
         <footer>
             <p>&copy; 2024 BMIcare. All rights reserved.</p>
         </footer>
