--- a/index.html
+++ b/index.html
@@ -22,22 +22,10 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        h1 {
+        h1,
+        h2 {
             text-align: center;
             color: #333;
-            background-color: #007bff;
-            padding: 20px 0;
-            margin-top: 0;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
-        }
-
-        h2 {
-            color: #fff;
-            padding: 10px 0;
-            margin-top: 0;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
         }
 
         p {
@@ -68,6 +56,10 @@
         header {
             text-align: center;
             padding: 20px 0;
+        }
+
+        header h1 {
+            font-size: 2em;
         }
 
         nav {
@@ -107,16 +99,6 @@
             margin-top: 50px;
             color: #666;
         }
-
-        /* Style for section headers */
-        .section-header {
-            background-color: #0056b3;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
-            padding: 10px 0;
-            margin-top: 0;
-            color: #fff;
-        }
     </style>
 </head>
 
@@ -143,20 +125,12 @@
             <div class="feature">
                 <img src="images/feature1_image.jpg" alt="Feature 1">
                 <h2>Calculate BMI Seamlessly</h2>
-                <p>Calculate your Body Mass Index (BMI) instantly with our easy-to-use BMI calculator. Simply input your height and weight into our intuitive interface, and receive your BMI along with a personalized interpretation of what it means for your health. Whether you're aiming to maintain a healthy weight, track your fitness progress, or manage your overall well-being, our BMI calculator provides you with quick and accurate results, empowering you to make informed decisions about your health journey</p>
+                <p>Calculate your Body Mass Index (BMI) instantly with our easy-to-use BMI calculator. Input your height and weight, and get your BMI along with a personalized interpretation.</p>
             </div>
             <div class="feature">
                 <img src="images/feature2_image.jpg" alt="Feature 2">
                 <h2> Health Insights At Your Fingertips</h2>
-                <p>Dive into a wealth of insights regarding your health status through our BMI calculator's comprehensive analysis. Uncover the significance of Body Mass Index (BMI) and its profound implications for your overall well-being. With each BMI result generated, our platform offers a nuanced interpretation, guiding you through the intricacies of BMI and its relevance to your health journey.
-
-Discover the significance of BMI as more than just a numerical value, but as a powerful indicator of your body's composition and health status. Understand how BMI correlates with factors such as muscle mass, body fat percentage, and overall fitness level, providing you with a holistic view of your physical well-being.
-
-Explore the nuances of BMI interpretation, delving into the different BMI categories and what they signify in terms of health risks and wellness goals. Whether you fall within the underweight, normal weight, overweight, or obese category, our platform equips you with the knowledge needed to understand your current health status and make informed decisions moving forward.
-
-Unlock the implications of BMI for your overall well-being, including its impact on your risk of developing chronic diseases such as heart disease, diabetes, and hypertension. By gaining a deeper understanding of your BMI results, you can proactively take steps to improve your health and reduce your risk of developing these conditions.
-
-Empower yourself with knowledge and insight as you embark on your health journey. With our BMI calculator, you're not just receiving a number—you're gaining valuable insights that will help you make meaningful changes to support your long-term health and wellness goals</p>
+                <p>Gain valuable insights into your health status based on your BMI results. Learn about the significance of BMI, its interpretation, and implications for your overall well-being.</p>
             </div>
             <div class="feature">
                 <img src="images/feature3_image.jpg" alt="Feature 3">
@@ -165,13 +139,10 @@ Empower yourself with knowledge and insight as you embark on your health journey
             </div>
         </section>
 
-        <!-- About Section  -->
-        <section id="about" style="background-color: #f8f9fa;">
-            <div class="section-header">
-                <h2>About BMIcare</h2>
-            </div>
-            <div class="about-content">
-                <p>The inspiration behind BMIcare stems from a deeply personal experience that ignited a passion for health and well-being within me. Several years ago, I found myself grappling with my own health challenges, struggling to maintain a balance between work, family, and self-care. Like many, I was aware of the importance of monitoring my body mass index (BMI) as a key indicator of my overall health status, but I found the process to be cumbersome and inaccessible.
+        <!-- About Section -->
+        <section id="about">
+            <h2>About BMIcare</h2>
+            <p>The inspiration behind BMIcare stems from a deeply personal experience that ignited a passion for health and well-being within me. Several years ago, I found myself grappling with my own health challenges, struggling to maintain a balance between work, family, and self-care. Like many, I was aware of the importance of monitoring my body mass index (BMI) as a key indicator of my overall health status, but I found the process to be cumbersome and inaccessible.
 
 As I navigated through various BMI calculators and health tracking tools available at the time, I couldn't shake the feeling of frustration and disconnection. It became increasingly clear to me that there was a significant gap in the market—a gap that begged to be filled by a solution that was not only accurate and reliable but also intuitive and user-friendly.
 
@@ -179,35 +150,26 @@ Driven by a desire to bridge this gap and empower individuals to take control of
 
 Together, we poured countless hours into research, development, and testing, striving to create a platform that would revolutionize the way individuals interact with their health data. We approached the project with a deep sense of purpose, knowing that every line of code we wrote had the potential to make a meaningful impact on someone's life.
 
-Today, BMIcare stands as a testament to the power of passion, perseverance, and innovation. It is more than just a software platform; it is a manifestation of our collective commitment to promoting health awareness and fostering positive change in the lives of individuals worldwide. As we continue to refine and expand BMIcare, our hope is that it will serve as a beacon of empowerment for all those striving to lead healthier, happier lives</p>
-                <p>Below are the links to my social media profiles:</p>
-                <ul>
-                    <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
-                    <li><a href="https://github.com/">GitHub</a></li>
-                    <li><a href="https://twitter.com/">Twitter</a></li>
-                </ul>
-                <p>Check out our project on <a href="https://github.com/kipsamoh/BMIcare">GitHub</a>.</p>
-            </div>
+Today, BMIcare stands as a testament to the power of passion, perseverance, and innovation. It is more than just a software platform; it is a manifestation of our collective commitment to promoting health awareness and fostering positive change in the lives of individuals worldwide. As we continue to refine and expand BMIcare, our hope is that it will serve as a beacon of empowerment for all those striving to lead healthier, happier lives..</p>
+            <p>This Portfolio Project for Holberton School showcases our dedication to creating impactful applications that address real-world needs. You can find the source code for BMIcare on <a href="https://github.com/kipsamoh/BMIcare">GitHub</a>.</p>
+            <p>Meet our team members:</p>
+            <ul>
+                <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+                <li><a href="https://github.com/">GitHub</a></li>
+                <li><a href="https://twitter.com/">Twitter</a></li>
+            </ul>
         </section>
 
         <!-- Contact Section -->
-        <section id="contact" style="background-color: #f8f9fa;">
-            <div class="section-header">
-                <h2>Contact Us</h2>
-            </div>
-            <div class="contact-content">
-                <p>Have questions or feedback? We'd love to hear from you! Reach out to us at contact@bmicare.com</p>
-            </div>
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Have questions or feedback? We'd love to hear from you! Reach out to us at contact@bmicare.com</p>
         </section>
 
         <!-- Help Section -->
-        <section id="help" style="background-color: #f8f9fa;">
-            <div class="section-header">
-                <h2>Need Help?</h2>
-            </div>
-            <div class="help-content">
-                <p>If you need assistance or have any inquiries regarding how to use BMIcare, check out our FAQ section or contact our support team for personalized assistance.</p>
-            </div>
+        <section id="help">
+            <h2>Need Help?</h2>
+            <p>If you need assistance or have any inquiries regarding how to use BMIcare, check out our FAQ section or contact our support team for personalized assistance.</p>
         </section>
 
         <!-- Footer Section -->
