--- a/index.html
+++ b/index.html
@@ -151,12 +151,14 @@ Driven by a desire to bridge this gap and empower individuals to take control of
 Together, we poured countless hours into research, development, and testing, striving to create a platform that would revolutionize the way individuals interact with their health data. We approached the project with a deep sense of purpose, knowing that every line of code we wrote had the potential to make a meaningful impact on someone's life.
 
 Today, BMIcare stands as a testament to the power of passion, perseverance, and innovation. It is more than just a software platform; it is a manifestation of our collective commitment to promoting health awareness and fostering positive change in the lives of individuals worldwide. As we continue to refine and expand BMIcare, our hope is that it will serve as a beacon of empowerment for all those striving to lead healthier, happier lives..</p>
-            <p>This Portfolio Project for Holberton School showcases our dedication to creating impactful applications that address real-world needs. You can find the source code for BMIcare on <a href="https://github.com/kipsamoh/BMIcare">GitHub</a>.</p>
-            <p>Meet our team members:</p>
+            <p>This Portfolio Project for Holberton School showcases our dedication to creating impactful applications that address real-world needs. 
+                You can find the source code for BMIcare on
+                <a href="https://github.com/kipsamoh/BMIcare">GitHub</a>.</p>
+            <p>My Social media profiles :</p>
             <ul>
-                <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
-                <li><a href="https://github.com/">GitHub</a></li>
-                <li><a href="https://twitter.com/">Twitter</a></li>
+                <li><a href="https://www.linkedin.com/daniel_chebet">LinkedIn</a></li>
+                <li><a href="https://github.com/kipsamoh">GitHub</a></li>
+                <li><a href="https://twitter.com/kipsamoh">Twitter</a></li>
             </ul>
         </section>
 
