--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <!-- Header Section -->
         <header>
             <h1>BMIcare Calculator App</h1>
-            <p>The BMIcare calculator app is a web-based tool designed to calculate Body Mass Index (BMI) based on user input of height and weight. BMI is a measure used to assess body weight relative to height, and it is commonly used as an indicator of overall health and risk of certain diseases.</p>
+            <p>The BMIcare calculator app is a web-based tool designed to calculate Body Mass Index (BMI) based on user input of height and weight. BMI is a measure used to assess body weight relative to height, and it is commonly used as an indicator of overall health and risk of certain diseases./p>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
