--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="feature">
                 <img src="images/feature1_image.jpg" alt="Feature 1">
                 <h2>Calculate BMI Seamlessly</h2>
-                <p> Calculate your Body Mass Index (BMI) instantly with our easy-to-use BMI calculator. Simply input your height and weight into our intuitive interface, and receive your BMI along with a personalized interpretation of what it means for your health. Whether you're aiming to maintain a healthy weight, track your fitness progress, or manage your overall well-being, our BMI calculator provides you with quick and accurate results, empowering you to make informed decisions about your health journey></p>
+                <p> Calculate your Body Mass Index (BMI) instantly with our easy-to-use BMI calculator. Simply input your height and weight into our intuitive interface, and receive your BMI along with a personalized interpretation of what it means for your health. Whether you're aiming to maintain a healthy weight, track your fitness progress, or manage your overall well-being, our BMI calculator provides you with quick and accurate results, empowering you to make informed decisions about your health journey</p>
             </div>
             <div class="feature">
                 <img src="images/feature2_image.jpg" alt="Feature 2">
